--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     "contao/conflicts": "@dev",
     "contao/core-bundle": "^4.13.0 || ^5.1",
     "doctrine/dbal": "^2.10.1 || ^3.2.0",
-    "symfony/http-client": "^5.4 || ^6.0"
+    "symfony/http-client": "^5.4 || ^6.0 || ^7.4 || ^8.0"
   },
   "require-dev": {
     "contao/manager-bundle": "^5.1",
